--- a/.env
+++ b/.env
@@ -5,3 +5,4 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="mysql://root@localhost:3306/locadora_nova"
+JWT_SEGREDO = aa1bf4646de67fd9086cf6c79007026c
